Use a Homebrew-ed gcc on osx (default gcc=clang)

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
     HOMEBREW_NO_AUTO_UPDATE=1 brew install cppcheck;
     fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]] && [[ "$CC" == "gcc" ]]; then
+    HOMEBREW_NO_AUTO_UPDATE=1 brew install gcc ;
+    CC="/usr/local/Cellar/gcc/*/bin/gcc-?" ;
+    fi
 language: c
 compiler:
   - clang
